"mysql" command not found ---in mac,  I don't know why